--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 numpy>=1.21.0
 pandas>=1.3.0
-scikit-learn>=1.0.0
+scikit-learn>=0.24.2
 boto3>=1.26.0
 fastapi>=0.68.0
 uvicorn>=0.15.0
 python-dotenv>=0.19.0
 pytest>=6.2.5
-pytest-cov>=2.12.0 
+pytest-cov>=2.12.1
+black>=21.7b0
+isort>=5.9.3
+flake8>=3.9.2
+httpx>=0.24.0 
