--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -e .
-          pip install pytest pytest-cov black isort
 
       - name: Check formatting with black
         run: |
-          black --check anomaly_detection/ tests/
+          black --check .
 
       - name: Check import sorting with isort
         run: |
-          isort --check-only anomaly_detection/ tests/
+          isort --check-only .
 
       - name: Run tests with coverage
         run: |
