--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ httpx>=0.24.0
 isort>=5.9.3
 numpy>=1.21.0
 pandas>=1.3.0
+pre-commit>=3.6.0
 python-dotenv>=0.19.0
 pytest>=6.2.5
 pytest-cov>=2.12.1
 scikit-learn>=0.24.2
-uvicorn>=0.15.0 
+uvicorn>=0.15.0
